TGR-1244: Mockserver Logger removed